tests/NormalTests/paczka1/fuzzy1/53678158.err
Error in line 12: DZ4sTpSuBtr S468 3,7
Error in line 17: ihX3k A498 63,4
Error in line 15: DZ4sTpSuBtr S863 0,3
Error in line 30: pEt3q0s A662 46,4
Error in line 35: DqHfd A662 -1,1
